--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     body{
         margin: 0px;
         padding: 0px;
-        background: url(/back.jpg) no-repeat center fixed;
+        background: url(back.jpg) no-repeat center fixed;
         background-size: cover;
         color: slateblue;
     }
